Network - Invites sent: Fix the vertical spacing.. match PSD -

--- a/css/all.css
+++ b/css/all.css
@@ -1149,7 +1149,10 @@ a.btn.reinstate:hover,
 .daashboard-frame.referral_page .col2 { width: 14.8%; }
 .daashboard-frame .col2 { width: 24.2%; }
 .invites_sent .col2 { width: 48%;}
-.invites_sent .col3 { width: 18%;}
+.invites_sent .col3 { width: 18%; }
+.invites_sent .col3 .btn {
+	margin-bottom: 0px;
+}
 .daashboard-frame.referral_page .col5 .meta,
 .daashboard-frame .col2 .meta {
 	display: block;
